<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerNamesActivity"
    android:background="#FFF4CF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:background="@drawable/bg_text_header"
                android:fontFamily="cursive"
                android:text="@string/playerNameTitle"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/label1"
                android:textColor="@color/red"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_player1Name"
                app:layout_constraintStart_toStartOf="@+id/et_player1Name" />

            <EditText
                android:id="@+id/et_player1Name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/playerHint"
                android:inputType="textPersonName"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_header"
                app:layout_constraintVertical_bias="0.20999998" />

            <EditText
                android:id="@+id/et_player2Name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/playerHint"
                android:textSize="25sp"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/label2"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_player2Name"
                app:layout_constraintStart_toStartOf="@+id/et_player2Name" />

            <Button
                android:id="@+id/btn_submitNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="87dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/bg_button"
                android:enabled="false"
                android:fontFamily="casual"
                android:inputType="text"
                android:paddingHorizontal="30dp"
                android:paddingVertical="11dp"
                android:text="@string/startPlayButton"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_player2Name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>